adding changes on HTML and CSS

--- a/index.html
+++ b/index.html
@@ -1,12 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Anonymous+Pro&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
+
 <body>
-    <h1 class="testing">Testing</h1>
+
+    <header>
+        <a href="#" class="link">Jesse McCallums</a>
+        <nav>
+            <i class="bi bi-list"  width="500" height="500"></i>
+        </nav>
+    </header>
+
+    <main>
+        <section>
+            <h1 class="firsttext">Jesse McCallums</h1>
+            <h2 class="secondtext"> Software developer</h2>
+            <p>I can help you build a product , feature or website Look through some of my work and experience! If you
+                like what you see and have a project you need coded, don’t hestiate to contact me.</p>
+        </section>
+    </main>
+
+
 </body>
+
 </html>
