adding labels in order to indentify it

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
 <body>
 
     <header>
-        <a href="#" class="link">Jesse McCallums</a>
+        <a href="#" class="link" alt="Logo">Jesse McCallums</a>
         <nav>
-            <i class="bi bi-list"  width="500" height="500"></i>
+            <i class="bi bi-list" alt="icon-nav"></i>
         </nav>
     </header>
 
     <main>
         <section>
-            <h1 class="firsttext">Jesse McCallums</h1>
-            <h2 class="secondtext"> Software developer</h2>
-            <p>I can help you build a product , feature or website Look through some of my work and experience! If you
+            <h1 class="firsttext" alt="text-presentation">Jesse McCallums</h1>
+            <h2 class="secondtext" alt="text-occupation"> Software developer</h2>
+            <p alt="text-paragraph">I can help you build a product , feature or website Look through some of my work and experience! If you
                 like what you see and have a project you need coded, don’t hestiate to contact me.</p>
         </section>
     </main>
