--- a/index.html
+++ b/index.html
@@ -96,6 +96,8 @@
 
 
             </ul>
+</section>
+            <section>
             <div>
                 <h1 class="myrecentwork">My recent <br>
                     work</h1>
@@ -221,18 +223,37 @@
             <form >
                 <div>
                 <label></label>
-                <input type="text" name="input" placeholder="Text input">
+                <input type="text" name="input" placeholder="Text input" class="input123">
                 </div>
                 <div>
                 <label></label>
-                <input type="email" name="email" placeholder="Email">
+                <input type="email" name="email" placeholder="Email" class="input1234">
                 </div>
                 <div>
                 <label></label>
-                <input type="text" name="Comments" placeholder="Enter text here">
+                <input type="text" name="Comments" placeholder="Enter text here" class="input12345">
                 </div>
-                <button type="button" class="button1">See project</button>
+                <button type="button" class="button12">See project</button>
             </form>
+
+        </section>
+
+        <section>
+            <div><img src="Rectangle.42.svg" alt="separator" class="separator-text1"></div>
+            <div class="icon">
+
+                <ul class="styling1">
+                    <li class="styling1"><img src="Vector.1.svg" alt="icon"></li>
+                    <li class="styling1"><img src="Group.png" alt="icon"></li>
+                    <li class="styling1"><img src="Vector.3.svg" alt="icon"></li>
+                    <li class="styling1"><img src="Vector.icon.svg" alt="icon"></li>
+                    <li class="styling1"><img src="Vector.5.svg" alt="icon"></li>
+
+                </ul>
+            </div>
+            <div>
+                <h1 class="lasttext">jessemccallums2001@gmail.com</h1>
+            </div>
         </section>
     </main>
 
