--- a/index.html
+++ b/index.html
@@ -230,11 +230,13 @@
     <p class="paragraph-text1">If you have an application you are interested in developing, a feature that you need built or a project that
         needs coding. I’d love to help with it </p>
     <footer class="third width">
-        <form action="" method="post">
-            <input type="text" name="name" id="name" placeholder="YourName" class="input123"><br>
-            <input type="email" name="email" id="email" placeholder="youremail@gmail.com" class="input1234"><br>
-            <input type="text" name="comment" id="comment" placeholder="Enter text here" class="input12345">
-            <input type="button" class="button12"> See project
+        <form action="https://formspree.io/f/mgeddrqw"
+        method="POST">
+            <input type="text" name="name" id="name" placeholder="YourName" class="input123" maxlength="30" required=""><br>
+            <input type="email" name="email" id="email" placeholder="youremail@gmail.com" class="input1234" required="" ><br>
+            <input type="text" name="comment" id="comment" placeholder="Leave your comments" class="input12345" maxlength="500" required=""><br>
+            
+            <button class="button12">See project</button>
         </form>
         <img src="Rectangle.421.svg" alt="separator" class="separator-text">
 
