--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     </header>
 
-    <section>
+    <section class="first width">
         <h1 class="firsttext">Jesse McCallums</h1>
         <h2 class="secondtext"> Software developer</h2>
         <p class="parrafo">I can help you build a product , feature or website Look through some of my work and
@@ -234,8 +234,7 @@
         method="POST">
             <input type="text" name="name" id="name" placeholder="YourName" class="input123" maxlength="30" required=""><br>
             <input type="email" name="email" id="email" placeholder="youremail@gmail.com" class="input1234" required="" ><br>
-            <input type="text" name="comment" id="comment" placeholder="Leave your comments" class="input12345" maxlength="500" required=""><br>
-            
+            <textarea name="comments" id="comment" cols="30" rows="10" placeholder="Leave your comments" class="input12345" maxlength="500" required=""></textarea>
             <button class="button12">See project</button>
         </form>
         <img src="Rectangle.421.svg" alt="separator" class="separator-text">
