Changing inputs from the form

--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
         method="POST">
             <input type="text" name="name" id="name" placeholder="YourName" class="input123" maxlength="30" required=""><br>
             <input type="email" name="email" id="email" placeholder="youremail@gmail.com" class="input1234" required="" ><br>
-            <textarea name="comments" id="comment" cols="30" rows="10" placeholder="Leave your comments" class="input12345" maxlength="500" required=""></textarea>
+            <textarea name="Message" id="Message" cols="30" rows="10" placeholder="Leave your message" class="input12345" maxlength="500" required=""></textarea>
             <button class="button12">See project</button>
         </form>
         <img src="Rectangle.421.svg" alt="separator" class="separator-text">
