--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
 
 
 
- <div class=""><li class="styling1_li"><img src="Group.55.svg" alt="icon">
+ <div class="work-section-right"><li class="styling1_li"><img src="Group.55.svg" alt="icon">
                     <p>Work</p>
                 </li>
                 <li class="styling1_li"> </li></div>
